chore: update styles

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -56,7 +56,7 @@ button:focus-visible {
   --breakpoint-sm: 320px;
   --breakpoint-md: 600px;
   --breakpoint-lg: 840px;
-  --breakpoint-desktop: 1024px;
+  --breakpoint-desktop: 840px;
   --breakpoint-xl: 1200px;
   --breakpoint-2xl: 1600px;
 
@@ -241,93 +241,9 @@ button:focus-visible {
   --color-surface-container-high: var(--surface-container-high);
   --color-surface-container-highest: var(--surface-container-highest);
 
+  --color-accent: var(--accent);
+
   --shadow-dot: 10004px 0 0 -5px;
   --shadow-dot-after: 10014px 0 0 -5px;
   --shadow-dot-before: 9984px 0 0 -5px;
-
-  --animate-dot-pulse: dot-pulse 1.5s infinite linear;
-  --animate-dot-pulse-before: dot-pulse-before 1.5s infinite linear;
-  --animate-dot-pulse-after: dot-pulse-after 1.5s infinite linear;
-  --animate-shimmer: shimmer 1.5s infinite;
-
-  @keyframes shimmer {
-    0% {
-      background-position: -200% 0;
-    }
-    100% {
-      background-position: 200% 0;
-    }
-  }
-
-  @keyframes spin {
-    to {
-      transform: rotate(360deg);
-    }
-  }
-
-  @keyframes dot-pulse-before {
-    0% {
-      box-shadow: 9984px 0 0 -5px;
-    }
-    30% {
-      box-shadow: 9984px 0 0 2px;
-    }
-    60%,
-    100% {
-      box-shadow: 9984px 0 0 -5px;
-    }
-  }
-
-  @keyframes dot-pulse {
-    0% {
-      box-shadow: 10004px 0 0 -5px;
-    }
-    30% {
-      box-shadow: 10004px 0 0 2px;
-    }
-    60%,
-    100% {
-      box-shadow: 10004px 0 0 -5px;
-    }
-  }
-
-  @keyframes dot-pulse-after {
-    0% {
-      box-shadow: 10014px 0 0 -5px;
-    }
-    30% {
-      box-shadow: 10014px 0 0 2px;
-    }
-    60%,
-    100% {
-      box-shadow: 10014px 0 0 -5px;
-    }
-  }
-}
-
-@layer components {
-  .dot-style::after,
-  .dot-style::before {
-    content: '';
-    display: inline-block;
-    position: absolute;
-    top: 0;
-    width: 7px;
-    height: 7px;
-    border-radius: 5px;
-    background-color: inherit;
-    color: inherit;
-  }
-
-  .dot-style::before {
-    box-shadow: 9984px 0 0 -5px;
-    animation: dot-pulse-before 1.5s infinite linear;
-    animation-delay: 0s;
-  }
-
-  .dot-style::after {
-    box-shadow: 10014px 0 0 -5px;
-    animation: dot-pulse-after 1.5s infinite linear;
-    animation-delay: 0.5s;
-  }
 }
